# MobileAccelerator

./: .gitignore  README.md  requirements.txt
android_app/: build.gradle
android_app/app/: CMakeLists.txt  build.gradle
android_app/app/src/androidTest/java/com/cscao/apps/ncsdemo/: ExampleInstrumentedTest.java
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: ncs_jni.c  snpe_jni.cpp
android_app/app/src/main/cpp/include/zdl/DiagLog/: IDiagLog.hpp  Options.hpp
android_app/app/src/main/cpp/include/zdl/DlContainer/: IDlContainer.hpp
android_app/app/src/main/cpp/include/zdl/DlSystem/: DlEnums.hpp  DlError.hpp  DlOptional.hpp  DlVersion.hpp  IBufferAttributes.hpp  ITensor.hpp  ITensorFactory.hpp  ITensorItr.hpp  ITensorItrImpl.hpp  IUDL.hpp  IUserBuffer.hpp  IUserBufferFactory.hpp  String.hpp  StringList.hpp  TensorMap.hpp  TensorShape.hpp  TensorShapeMap.hpp  UDLContext.hpp  UDLFunc.hpp  UserBufferMap.hpp  ZdlExportDefine.hpp
android_app/app/src/main/cpp/include/zdl/SNPE/: SNPE.hpp  SNPEBuilder.hpp  SNPEFactory.hpp
android_app/app/src/main/java/com/cscao/apps/ncsdemo/: Helper.java  MainActivity.java
android_app/app/src/main/res/layout/: activity_main.xml
android_app/app/src/main/res/values/: strings.xml
android_app/app/src/main/res/xml/: ncs_filter.xml
android_app/app/src/test/java/com/cscao/apps/ncsdemo/: ExampleUnitTest.java
android_app/gradle/wrapper/: gradle-wrapper.properties
common/: download_model.py  export_inference_graph.py  freeze_model.py  gen_weights.py  label_image.py  nets_factory.py  prepare_all.sh  print_flops.py  prune_model.py  visualize_model.py
common/slim/: eval_image_classifier.py  export_inference_graph.py
common/slim/nets/: alexnet.py  inception.py  inception_v3_custom.py  nets_factory.py  squeezenet.py
common/slim/nets/mobilenet/: mobilenet_v2.py
common/slim/preprocessing/: preprocessing_factory.py
common/slim/syn_nets/: __init__.py  twoalexnet.py  twosqueezenet.py
common/slim/syn_nets/var_alexnet/: alexnet_bs.py  alexnet_bs2.py  alexnet_fd2.py  alexnet_fd5.py  alexnet_fw1.py  alexnet_fw5.py  alexnet_p2.py  alexnet_wd11.py  alexnet_wd13.py  alexnet_wd18.py  alexnet_wd25.py  alexnet_wd38.py  alexnet_wd5.py  alexnet_wd8.py
energy/: get_energy.py  measure.py  plot_realtime_power.py  power_oneplus3.py  sample.py
energy/Monsoon/: HVPM.py  sampleEngine.py
ncs/: convert_model.py  run_all.sh  run_ncs.py
ncs/android_demo/: build.gradle
ncs/android_demo/app/: build.gradle
ncs/android_demo/app/src/main/java/com/cscao/apps/ncsdemo/: MainActivity.java
ncs/android_demo/app/src/main/res/layout/: activity_main.xml
ncs/android_demo/gradle/wrapper/: gradle-wrapper.properties
ncs/api_demo/: CMakeLists.txt  README.md  fp16.h  image_classes.h  ncs_demo.c  ncs_demo.h  ncs_demo.py  ncs_jni.c  stb_image.h  stb_image_resize.h
ncs/api_demo/api/: mvncapi.py
ncs/api_demo/api/include/: mvnc.h
ncs/api_demo/api/libs/Darwin/: libusb-1.0.0.dylib
ncs/api_demo/api/src/: common.h  mvnc_api.c  usb_boot.c  usb_boot.h  usb_link_vsc.c
ncs2/: README.md  bs.txt  classification_sample.py  create_tf_models.py  fd2.txt  fd5.txt  fw1.txt  fw5.txt  generate_custom_nets.py  ncs_util.py  net_values.py  run_custom_nets.py
snpe/: run_all.sh  run_snpe.py
tflite/: convert_model.py
tflite/arm64/: label_image
tflite/macos/: label_image  label_image.runfiles_manifest
tx2power/: CMakeLists.txt  tx2power.c  tx2power.h
